RESOLVED FIXED273157
REGRESSION(277648@main) Breaks prewarmed safari processes
https://bugs.webkit.org/show_bug.cgi?id=273157
Summary REGRESSION(277648@main) Breaks prewarmed safari processes
Keith Miller
Reported 2024-04-23 17:34:49 PDT
...
Attachments
Keith Miller
Comment 1 2024-04-23 17:36:19 PDT
Keith Miller
Comment 2 2024-04-23 17:38:26 PDT
EWS
Comment 3 2024-04-23 17:45:52 PDT
Committed 277906@main (5ca7d6c79561): <https://commits.webkit.org/277906@main> Reviewed commits have been landed. Closing PR #27668 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.