Cherry-pick 5ca7d6c79561. rdar://126767343

REGRESSION(277648@main) Breaks prewarmed safari processes
    https://bugs.webkit.org/show_bug.cgi?id=273157
    rdar://126767343

    Unreviewed, revert.

    * Source/JavaScriptCore/jsc.cpp:
    (main):
    (CommandLine::parseArguments):
    * Source/JavaScriptCore/runtime/InitializeThreading.cpp:
    (JSC::initialize):
    * Source/JavaScriptCore/runtime/JSCConfig.cpp:
    (JSC::Config::disableFreezingForTesting):
    * Source/JavaScriptCore/runtime/JSCConfig.h:
    (JSC::Config::permanentlyFreeze):
    (JSC::Config::disableFreezingForTesting): Deleted.
    (JSC::Config::finalize): Deleted.
    * Source/JavaScriptCore/runtime/VM.cpp:
    (JSC::VM::VM):
    * Source/JavaScriptCore/runtime/VMEntryScope.cpp:
    (JSC::VMEntryScope::setUpSlow):
    * Source/JavaScriptCore/runtime/VMTraps.cpp:
    * Source/JavaScriptCore/tools/JSDollarVM.cpp:
    (JSC::JSC_DEFINE_HOST_FUNCTION_WITH_ATTRIBUTES):
    * Source/JavaScriptCore/wasm/WasmFaultSignalHandler.cpp:
    (JSC::Wasm::MachExceptionSigningKey::MachExceptionSigningKey):
    (JSC::Wasm::trapHandler):
    (JSC::Wasm::activateSignalingMemory):
    (JSC::Wasm::prepareSignalingMemory):
    (): Deleted.
    * Source/JavaScriptCore/wasm/WasmFaultSignalHandler.h:
    * Source/WTF/wtf/CryptographicallyRandomNumber.cpp:
    (WTF::cryptographicallyRandomNumber<unsigned>):
    (WTF::cryptographicallyRandomNumber<uint64_t>):
    (WTF::cryptographicallyRandomNumber<uint8_t>): Deleted.
    * Source/WTF/wtf/CryptographicallyRandomNumber.h:
    * Source/WTF/wtf/PlatformRegisters.cpp:
    (WTF::threadStatePCInternal):
    * Source/WTF/wtf/Threading.cpp:
    (WTF::initialize):
    * Source/WTF/wtf/WTFConfig.cpp:
    (WTF::Config::initialize):
    (WTF::Config::permanentlyFreeze):
    (WTF::Config::finalize): Deleted.
    (WTF::Config::disableFreezingForTesting): Deleted.
    * Source/WTF/wtf/WTFConfig.h:
    * Source/WTF/wtf/threads/Signals.cpp:
    (WTF::SignalHandlers::add):
    (WTF::initMachExceptionHandlerThread):
    (WTF::setExceptionPorts):
    (WTF::activeThreads):
    (WTF::registerThreadForMachExceptionHandling):
    (WTF::addSignalHandler):
    (WTF::activateSignalHandlersFor):
    (WTF::finalizeSignalHandlers):
    (WTF::jscSignalHandler):
    (WTF::SignalHandlers::initialize):
    (WTF::SignalHandlers::presignReturnPCForHandler): Deleted.
    (WTF::toMachMask): Deleted.
    (WTF::SignalHandlers::finalize): Deleted.
    * Source/WTF/wtf/threads/Signals.h:
    (WTF::toMachMask):
    (WTF::initializeSignalHandling):
    (WTF::disableSignalHandling):
    * Source/WTF/wtf/win/SignalsWin.cpp:
    (WTF::SignalHandlers::add):
    (WTF::addSignalHandler):
    (WTF::activateSignalHandlersFor):
    (WTF::SignalHandlers::initialize):
    (WTF::finalizeSignalHandlers):
    (WTF::SignalHandlers::finalize): Deleted.
    * Source/WebKit/GPUProcess/EntryPoint/Cocoa/XPCService/GPUServiceEntryPoint.mm:
    (GPU_SERVICE_INITIALIZER):
    * Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:
    * Tools/DumpRenderTree/mac/DumpRenderTree.mm:
    (testOptionsForTest):
    * Tools/TestWebKitAPI/Tests/WTF/Signals.cpp:
    (TEST(Signals, SignalsWorkOnExit)):
    (TEST(Signals, SignalsAccessFault)):

    Canonical link: https://commits.webkit.org/277906@main

Canonical link: https://commits.webkit.org/277790.13@safari-7619.1.10-branch