Source/WTF/wtf/Threading.cpp
@@ -500,6 +500,9 @@ void initialize()
 #endif
         initializeDates();
         Thread::initializePlatformThreading();
+#if USE(PTHREADS) && HAVE(MACHINE_CONTEXT)
+        SignalHandlers::initialize();
+#endif
 #if PLATFORM(COCOA)
         initializeLibraryPathDiagnostics();
 #endif
